[package]
name = "hello_wasm"
version = "0.1.0"
authors = ["Wayne Stewart <waynegaidin@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasm-bindgen = "0.2"

[profile.release]
lto = true
#opt-level = "s" # LLVM optimize for size
opt-level = "z" # LLVM optimize for size ( MORE! )

